syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

import "google/protobuf/Empty.proto";

package CareerCloud.gRPC;

service ApplicantProfile{
	rpc GetApplicantProfile(IdRequestApplicantProfile) returns(ApplicantProfilePayLoad);
	rpc CreateApplicantProfile(ApplicantProfilePayLoad) returns(google.protobuf.Empty);
	rpc UpdatedApplicantProfile(ApplicantProfilePayLoad) returns(google.protobuf.Empty);
	rpc DeleteApplicantProfile(ApplicantProfilePayLoad) returns(google.protobuf.Empty);
}

message IdRequestApplicantProfile{
	string Id= 1;
}

message ApplicantProfilePayLoad{
	 string Id = 1;
     string Login = 2;
     double CurrentSalary = 3;
     double CurrentRate = 4;
     string Currency = 5;
     string Country = 6;
     string Province = 7;
     string Street = 8;
     string City = 9;
     string PostalCode = 10;
}
